<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/options_panel_size"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <com.mrdeveloper.asciipaint.view.TintableIconTextView
        android:id="@+id/option_tool"
        style="@style/BottomPanelOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_brush_black_24dp"
        android:text="@string/bp_option_tool" />

    <LinearLayout
        android:id="@+id/options_symbol"
        style="@style/BottomPanelOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/symbol_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_draw_symbol"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bp_option_symbol"
            android:textColor="@color/secondaryText" />
    </LinearLayout>


    <com.mrdeveloper.asciipaint.view.TintableIconTextView
        android:id="@+id/option_presets"
        style="@style/BottomPanelOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_filter_black_24dp"
        android:text="@string/bp_option_presets" />


    <LinearLayout
        android:id="@+id/option_color"
        style="@style/BottomPanelOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.mrdeveloper.asciipaint.view.ColorCircleView
            android:id="@+id/color_circle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:color="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bp_option_color"
            android:textColor="@color/secondaryText" />
    </LinearLayout>


    <com.mrdeveloper.asciipaint.view.TintableIconTextView
        android:id="@+id/option_size"
        style="@style/BottomPanelOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_format_size_black_24dp"
        android:text="@string/bp_option_size" />


</LinearLayout>